[package]
name = "py-polars"
version = "1.5.0"
edition = "2021"

[lib]
name = "polars"
crate-type = ["cdylib"]

[dependencies]
polars-python = { workspace = true, default-features = true }
pyo3 = { workspace = true, features = ["abi3-py38", "chrono", "extension-module", "multiple-pymethods"] }

[build-dependencies]
built = { version = "0.7", features = ["chrono", "git2", "cargo-lock"], optional = true }

[target.'cfg(all(any(not(target_family = "unix"), allocator = "mimalloc"), not(allocator = "default")))'.dependencies]
mimalloc = { version = "0.1", default-features = false }

# Feature background_threads is unsupported on MacOS (https://github.com/jemalloc/jemalloc/issues/843).
[target.'cfg(all(target_family = "unix", not(target_os = "macos"), not(allocator = "mimalloc"), not(allocator = "default")))'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls", "background_threads"] }

[target.'cfg(all(target_family = "unix", target_os = "macos", not(allocator = "mimalloc"), not(allocator = "default")))'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

[features]
build_info = ["dep:built"]
ffi_plugin = ["polars-python/ffi_plugin"]
csv = ["polars-python/csv"]
polars_cloud = ["polars-python/polars_cloud"]
object = ["polars-python/object"]
clipboard = ["polars-python/clipboard"]
sql = ["polars-python/sql"]
trigonometry = ["polars-python/trigonometry"]
parquet = ["polars-python/parquet"]
ipc = ["polars-python/ipc"]

all = [
  "build_info",
  "ffi_plugin",
  "csv",
  "polars_cloud",
  "object",
  "clipboard",
  "sql",
  "trigonometry",
  "parquet",
  "ipc",
]

# we cannot conditionally activate simd
# https://github.com/rust-lang/cargo/issues/1197
# so we have an indirection and compile
# with --no-default-features --features=all for targets without simd
default = [
  "all",
  #   "nightly",
]
