[package]
name = "py-polars"
version = "1.33.1"
edition = "2021"

[lib]
name = "polars"
crate-type = ["cdylib"]

[dependencies]
libc = { workspace = true }
# Explicit dependency is needed to add bigidx in CI during release
polars = { workspace = true }
polars-python = { workspace = true, features = ["allocator", "c_api", "pymethods", "iejoin"] }
pyo3 = { workspace = true, features = ["abi3-py39", "chrono", "extension-module", "multiple-pymethods"] }

either = { workspace = true }

[features]

# Features passed through to the polars-python crate
# needed to activate bigidx in cloud
bigidx = ["polars/bigidx"]

full = [
  "polars-python/full",
  "polars-python/nightly"
]

default_alloc = ["polars-python/default_alloc"]
default = ["full"]

[lints]
workspace = true
