[build-system]
requires = ["maturin>=1.3.2"]
build-backend = "maturin"

[project]
name = "polars"
description = "Blazingly fast DataFrame library"
readme = "README.md"
authors = [
  { name = "Ritchie Vink", email = "ritchie46@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.8"

keywords = ["dataframe", "arrow", "out-of-core"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://www.pola.rs/"
Documentation = "https://docs.pola.rs/api/python/stable/reference/index.html"
Repository = "https://github.com/pola-rs/polars"
Changelog = "https://github.com/pola-rs/polars/releases"

[project.optional-dependencies]
# NOTE: keep this list in sync with show_versions() and requirements-dev.txt
# Interop
numpy = ["numpy >= 1.16.0"]
pandas = ["pandas", "polars[pyarrow]"]
pyarrow = ["pyarrow >= 7.0.0"]
pydantic = ["pydantic"]

# Excel
calamine = ["fastexcel >= 0.9"]
openpyxl = ["openpyxl >= 3.0.0"]
xlsx2csv = ["xlsx2csv >= 0.8.0"]
xlsxwriter = ["xlsxwriter"]
excel = ["polars[calamine,openpyxl,xlsx2csv,xlsxwriter]"]

# Database
adbc = ["adbc-driver-manager[dbapi]", "adbc-driver-sqlite[dbapi]"]
connectorx = ["connectorx >= 0.3.2"]
sqlalchemy = ["sqlalchemy", "polars[pandas]"]
database = ["polars[adbc,connectorx,sqlalchemy]", "nest-asyncio"]

# Cloud
fsspec = ["fsspec"]

# Other I/O
deltalake = ["deltalake >= 0.15.0"]
iceberg = ["pyiceberg >= 0.5.0"]

# Other
async = ["gevent"]
cloudpickle = ["cloudpickle"]
graph = ["matplotlib"]
plot = ["altair >= 5.4.0"]
style = ["great-tables >= 0.8.0"]
timezone = ["backports.zoneinfo; python_version < '3.9'", "tzdata; platform_system == 'Windows'"]

# GPU Engine
gpu = ["cudf-polars-cu12"]

# All
all = [
  "polars[async,cloudpickle,database,deltalake,excel,fsspec,graph,iceberg,numpy,pandas,plot,pyarrow,pydantic,style,timezone]",
]

[tool.maturin]
include = [{ path = "rust-toolchain.toml", format = "sdist" }]

[tool.mypy]
files = ["polars", "tests"]
strict = true
enable_error_code = [
  "redundant-expr",
  "truthy-bool",
  "ignore-without-code",
]
disable_error_code = [
  "empty-body",
]

[[tool.mypy.overrides]]
module = [
  "IPython.*",
  "adbc_driver_manager.*",
  "adbc_driver_sqlite.*",
  "altair.*",
  "arrow_odbc",
  "backports",
  "connectorx",
  "deltalake.*",
  "fsspec.*",
  "gevent",
  "great_tables",
  "jax.*",
  "kuzu",
  "matplotlib.*",
  "moto.server",
  "nest_asyncio",
  "openpyxl",
  "polars.polars",
  "pyarrow.*",
  "pydantic",
  "pyiceberg.*",
  "sqlalchemy.*",
  "torch.*",
  "xlsx2csv",
  "xlsxwriter.*",
  "zoneinfo",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "IPython.*",
  "matplotlib.*",
]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["polars.*"]
# We exclude the polars module from warn_return_any, because the PyO3 api does not have Python
# type annotations. See https://github.com/PyO3/pyo3/issues/1112 for a discussion on adding
# this capability. We could add a stub file for polars.polars (the PyO3 api), but that
# amounts to duplicating almost all type annotations on our api, as the Python api itself is a
# thin wrapper around the PyO3 api to start with.
warn_return_any = false

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = [
  "ANN", # flake8-annotations
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "D", # flake8-docstrings
  "E", # pycodestyle
  "EM", # flake8-errmsg
  "F", # pyflakes
  "FA", # flake8-future-annotations
  "FBT001", # flake8-boolean-trap
  "I", # isort
  "ICN", # flake8-import-conventions
  "INT", # flake8-gettext
  "PERF", # perflint
  "PIE", # flake8-pie
  "PT", # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  "RUF", # ruff-specific rules
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "TD", # flake8-todos
  "TID", # flake8-tidy-imports
  "TRY", # tryceratops
  "UP", # pyupgrade
  "W", # pycodestyle
]

ignore = [
  # ------------------------------------------------------------------
  # TODO: Remove errors below to further improve docstring linting
  # ------------------------------------------------------------------
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  # ------------------------------------------------------------------
  "ANN101", # Missing type annotation for `self` in method
  "ANN102", # Missing type annotation for `cls` in classmethod
  "ANN401", # Dynamically typed expressions (Any) are disallowed
  "D401", # Relax NumPy docstring convention: first line should be imperative
  "E501", # Line length regulated by formatter
  "PT011", # pytest.raises is too broad, set match or use a more specific exception
  "PYI041", # Use float instead of int | float
  "RUF022", # `__all__` is not sorted
  "RUF005", # Consider expression instead of concatenation
  "SIM102", # Use a single `if` statement instead of nested `if` statements
  "SIM108", # Use ternary operator
  "TD002", # Missing author in TODO
  "TD003", # Missing issue link on the line following this TODO
  "TRY003", # Avoid specifying long messages outside the exception class
]
allowed-confusables = ["µ"]

[tool.ruff.lint.per-file-ignores]
"dependencies.py" = ["ICN001"]
"tests/**/*.py" = ["D100", "D102", "D103", "B018", "FBT001"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
addopts = [
  "--tb=short",
  "--strict-config",
  "--strict-markers",
  "--import-mode=importlib",
  # Default to running fast tests only. To run ALL tests, run: pytest -m ""
  "-m not slow and not write_disk and not release and not docs and not hypothesis and not benchmark and not ci_only",
]
markers = [
  "ci_only: Tests that should only run on CI by default.",
  "debug: Tests that should be run on a Polars debug build.",
  "docs: Documentation code snippets",
  "release: Tests that should be run on a Polars release build.",
  "slow: Tests with a longer than average runtime.",
  "write_disk: Tests that write to disk",
  "may_fail_auto_streaming: Test that may fail when automatically using the streaming engine for all lazy queries.",
]
filterwarnings = [
  # Fail on warnings
  "error",
  # Allow debugging in an IPython console
  "ignore:.*unrecognized arguments.*PyDevIPCompleter:DeprecationWarning",
  # Ignore warnings issued by dependency internals
  "ignore:.*is_sparse is deprecated.*:FutureWarning",
  "ignore:FigureCanvasAgg is non-interactive:UserWarning",
  "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated.*:DeprecationWarning",
  "ignore:datetime.datetime.utcnow\\(\\) is deprecated.*:DeprecationWarning",
  # Introspection under PyCharm IDE can generate this in Python 3.12
  "ignore:.*co_lnotab is deprecated, use co_lines.*:DeprecationWarning",
  # TODO: Excel tests lead to unclosed file warnings
  # https://github.com/pola-rs/polars/issues/14466
  "ignore:unclosed file.*:ResourceWarning",
  # Ignore invalid warnings when running earlier versions of SQLAlchemy (we
  # know they are invalid because our standard tests run the latest version)
  "ignore:Deprecated API features detected.*:DeprecationWarning",
]
xfail_strict = true

[tool.coverage.run]
source = ["polars"]
branch = true

[tool.coverage.report]
fail_under = 85
skip_covered = true
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "except ImportError",
  "if TYPE_CHECKING:",
  "from typing_extensions import ",
]
